# docker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/: matrix.php
.github/workflows/: docker.yml
root/: build-deps.sh  build-setup.sh  dokuwiki-entrypoint.sh  dokuwiki-storagesetup.sh
root/etc/apache2/conf-available/: dokuwiki.conf
root/usr/local/etc/php/conf.d/: dokuwiki.ini
root/var/www/html/: .autoprepend.php  .htaccess  health.php
root/var/www/html/conf/: docker.php  docker.protected.php  plugins.docker.php
root/var/www/html/inc/: preload.php
